# blog

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  compose.override.yml  compose.yml
.claude/agents/: backend.md  devops.md  feature-spec.md  frontend.md  review.md  test-backend.md  test-frontend.md
.claude/commands/: create-issue.md  github-issue.md  smart-commit.md  smart-push.md
.claude/skills/htmx-svelte-islands/: SKILL.md
.claude/skills/htmx-svelte-islands/references/: frontend.md
.claude/skills/security-review/: SKILL.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  deploy.yml  labeler.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/versions/: 71337974e647_add_post_tag_project_tables.py  89895fed1f49_add_github_metadata_fields_to_project.py
backend/app/api/: deps.py
backend/app/api/routes/: items.py  login.py  private.py  users.py  utils.py
backend/app/content/: __init__.py  frontmatter.py  loader.py  renderer.py  sync.py
backend/app/core/: config.py  db.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  observability.py  rate_limit.py  security.py
backend/app/crud/: __init__.py  post.py  project.py  user.py
backend/app/email-templates/src/: new_account.mjml
backend/app/models/: __init__.py  post.py  project.py  user.py
backend/app/pages/: blog.py  deps.py  feeds.py  portfolio.py  router.py
backend/app/schemas/: __init__.py  common.py  post.py  project.py  user.py
backend/app/services/: auth.py  blog.py  content_sync.py  github.py  portfolio.py  post.py  project.py  user.py
backend/app/static/css/: base.css  components.css  print.css  style.css  syntax.css  tokens.css  utilities.css
backend/app/static/js/: contact.js  nav.js  post-actions.js  theme.js
backend/app/templates/: base.html
backend/app/templates/errors/: 404.html  500.html
backend/app/templates/feeds/: llms.txt  llms_full.txt  rss.xml  sitemap.xml
backend/app/templates/pages/: about.html  blog_list.html  blog_list_partial.html  blog_post.html  home.html  privacy.html  projects.html  search.html  search_results_partial.html
backend/app/templates/partials/: footer.html  header.html  nav.html  pagination.html  post_card.html  tag_list.html
backend/scripts/: lint.sh  prestart.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_login.py  test_rate_limit.py  test_users.py  test_utils.py
backend/tests/content/: test_frontmatter.py  test_loader.py  test_renderer.py  test_slugify.py
backend/tests/core/: test_exception_handlers.py  test_middleware.py
backend/tests/crud/: test_post.py  test_project.py  test_user.py
backend/tests/pages/: test_blog.py  test_feeds.py  test_portfolio.py
backend/tests/services/: test_auth.py  test_blog_service.py  test_content_sync.py  test_github.py  test_portfolio_service.py  test_user.py
backend/tests/utils/: user.py
content/_drafts/: 2026-02-20-migrating-ingress-nginx-to-traefik.md
content/pages/: about.md  privacy.md
content/posts/: 2026-02-17-hello-world.md  2026-03-17-upgrading-argocd-across-three-major-versions.md
content/projects/: blog.md
docker/: otel-collector-config.yaml
docs/: deployment.md  scopes.md
docs/scopes/: auth.md  blog.md  ci.md  content.md  core.md  feeds.md  frontend.md  portfolio.md  tests.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: base.ts
e2e/tests/: a11y.spec.ts  blog.spec.ts  feeds.spec.ts  htmx.spec.ts  islands.spec.ts  navigation.spec.ts  print.spec.ts  responsive.spec.ts  seo.spec.ts
islands/: jsconfig.json  package-lock.json  package.json  vite.config.js
islands/src/: SearchDialog.js  SearchDialog.svelte  TableOfContents.js  TableOfContents.svelte
islands/src/islands/SearchDialog/: SearchDialog.svelte  index.js
islands/src/islands/TableOfContents/: TableOfContents.svelte  index.js
islands/src/lib/: actions.js  events.js  registry.js
scripts/: new-post.sh
