[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "tenacity>=8.2.3,<10.0.0",
    "pydantic>2.0",
    "emails>=0.6,<2.0",
    "jinja2<4.0.0,>=3.1.4",
    "alembic<2.0.0,>=1.12.1",
    "httpx<1.0.0,>=0.25.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    "pydantic-settings<3.0.0,>=2.2.1",
    "pyjwt<3.0.0,>=2.8.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "structlog>=24.1.0,<26.0.0",
    "opentelemetry-api>=1.24.0,<2.0.0",
    "opentelemetry-sdk>=1.24.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "mistune>=3.0,<4.0",
    "pygments>=2.17,<3.0",
    "pyyaml>=6.0,<7.0",
    "slowapi>=0.1.9,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<10.0.0",
    "ty>=0.0.1a7",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["**/alembic/**"]

[tool.ruff]
target-version = "py314"
exclude = ["alembic"]
src = [".", "app", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Exceptions use `raise X from e` — remove once all HTTPException are gone
]

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"
omit = [
    "app/initial_data.py",
    "app/content/sync.py",
    "app/tests_pre_start.py",
    "app/backend_pre_start.py",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
fail_under = 90

[tool.coverage.html]
show_contexts = true
